--- a/bibliography.bib
+++ b/bibliography.bib
@@ -41,7 +41,7 @@ Type= {Article},
     url = {https://www.ibm.com/developerworks/community/blogs/nlp/entry/tokenization?lang=en}
   }			
 		
-		@Article{glmte,
+	@Article{glmte,
   title = {Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent},
   author = {Noah Simon and Jerome Friedman and Trevor Hastie and Rob Tibshirani},
   journal = {Journal of Statistical Software},
@@ -51,3 +51,12 @@ Type= {Article},
   pages = {1--13},
   url = {http://www.jstatsoft.org/v39/i05/},
 }
+
+@Misc{nlp_bible, 
+	title = {Speech and Language Processing
+	An Introduction to Natural Language Processing,
+	Computational Linguistics, and Speech Recognition
+	}, 
+	year = {2018},
+	author = {Daniel Jurafsky and James H. Martin},
+	url = {https://web.stanford.edu/~jurafsky/slp3/ed3book.pdf}}
