added several new citations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -41,7 +41,7 @@ Type= {Article},
     url = {https://www.ibm.com/developerworks/community/blogs/nlp/entry/tokenization?lang=en}
   }			
 		
-	@Article{glmte,
+	@Article{glmnet,
   title = {Regularization Paths for Cox's Proportional Hazards Model via Coordinate Descent},
   author = {Noah Simon and Jerome Friedman and Trevor Hastie and Rob Tibshirani},
   journal = {Journal of Statistical Software},
