--- a/RL_reg.Rmd
+++ b/RL_reg.Rmd
@@ -53,6 +53,7 @@ knitr::opts_chunk$set(comment = NA)
 
 \newpage
 
+
 \begin{center}{\large\textbf{Logistic Ridge and Lasso regression in NLP}}\end{center}
 
 \vspace{2\baselineskip}
@@ -62,11 +63,14 @@ The aim of this paper is to give a brief introduction to natural language proces
 
 The calculations and visuals are made using the statistical software $\textbf{R}$. The main framework for text preprocesing is the $\textbf{text2vec}$ `r Cite(bib, 'text2vec')` package. 
 
+The coefficients of the logistic regression are calculates using the package $\textbf{glmnet}$ `r Cite(bib, 'glmnet')`.
+
 \vspace{\baselineskip}
 \noindent\textbf{Key words :}
 Logistic regression, Ridge, Lasso, Elastic Net, NLP, machine learning, tfidf
 
 \vspace{\baselineskip}
+
 
 \newpage
 
@@ -231,7 +235,7 @@ In practice, all $x_{ij}$ are either 0 or 1, indicating existence in certain row
 
 The general model is then:
 
-$$ log \dfrac{P(Y = 1)}{P(Y = 0)} = \sum_{i = 0}^{k}\beta_{i} X_{i} \, (1)$$
+$$ log \dfrac{P(Y = 1)}{P(Y = 0)} = \sum_{i = 0}^{k}\theta_{i} X_{i} \, (1)$$
 
 \newpage
 
@@ -240,10 +244,10 @@ $$ log \dfrac{P(Y = 1)}{P(Y = 0)} = \sum_{i = 0}^{k}\beta_{i} X_{i} \, (1)$$
 Let us define: 
 
 $$\theta := \begin{bmatrix}
-    \beta_{0}\\
-    \beta_{1}\\
+    \theta_{0}\\
+    \theta_{1}\\
     \vdots \\
-    \beta_{k}
+    \theta_{k}
 \end{bmatrix}$$
 
 From (1), the probability of 'success' for each observation i can be rewritten as `r Cite(bib, 'ML', .opts = list(cite.style = "numeric"), after=" , pp. 3-5")`:
@@ -272,7 +276,7 @@ The $\widehat{\theta}$ that maximizes the (3) equation will give a weight to eve
 
 Ridge logistic regression introduces an additional term to the (3) equation - the L2 penalty.
 
-$$ L^{R}(\theta, \alpha) = \sum_{i}^{n}\left[y_{i}\theta^{T}\mathbb{X}_{i} + log(1 + e^{\theta^{T}\mathbb{X}_{i}})\right] - \alpha \sum_{j = 1}^{k} \beta_{j}^{2} $$
+$$ L^{R}(\theta, \alpha) = \sum_{i}^{n}\left[y_{i}\theta^{T}\mathbb{X}_{i} + log(1 + e^{\theta^{T}\mathbb{X}_{i}})\right] - \alpha \sum_{j = 1}^{k} \theta_{j}^{2} $$
 
 Often in practice, the $\alpha$ parameter is fixed to a certain value. As the parameter $\alpha$ increases, the ridge coefficient estimates will tend to approach zero. However, the penalty introduced in the log-likelihood function will shrink all of the coefficients towards zero, but it will not set any of them exactly to zero. Hence, ridge regression has the disadvantage over model selection, of including all the predictors in the final model. 
 
@@ -282,7 +286,7 @@ On the other hand, Ridge regression estimates gives us more uniformally distribu
 
 Lasso logistic regression is very similar to that of Ridge, but the penalty term is L1:
 
-$$ L^{L}(\theta, \alpha) = \sum_{i}^{n}\left[y_{i}\theta^{T}\mathbb{X}_{i} + log(1 + e^{\theta^{T}\mathbb{X}_{i}})\right] - \alpha \sum_{j = 1}^{k} |\beta_{j}| $$
+$$ L^{L}(\theta, \alpha) = \sum_{i}^{n}\left[y_{i}\theta^{T}\mathbb{X}_{i} + log(1 + e^{\theta^{T}\mathbb{X}_{i}})\right] - \alpha \sum_{j = 1}^{k} |\theta_{j}| $$
 
 The L1 penalty used in the lasso is used for both variable selection and shrinkage, since it has the effect, when the $\alpha$ is sufficiently large, of forcing some of the coefficient estimates to be exactly equal to zero `r Cite(bib, 'ridge_lasso', .opts = list(cite.style = "numeric"), after=" , pp.637")`.
 In Lasso regression, the final model may involve only a subset of the predictors, which in turn improves model interpretability. 
@@ -293,12 +297,21 @@ Depending on the research subject and the problem, having less predictors is ben
 
 One is not confined to just using either Ridge or Lasso regression. The elastic net procedure tries to implement both of these methods: 
 
-$$ L^{EN}(\theta, \alpha) = \sum_{i}^{n}\left[y_{i}\theta^{T}\mathbb{X}_{i} + log(1 + e^{\theta^{T}\mathbb{X}_{i}})\right] -( \alpha \sum_{j = 1}^{k} |\beta_{j}| + (1 - \alpha)\sum_{j = 1}^{k} \beta_{j}^{2})$$
+$$ L^{EN}(\theta, \alpha) = \sum_{i}^{n}\left[y_{i}\theta^{T}\mathbb{X}_{i} + log(1 + e^{\theta^{T}\mathbb{X}_{i}})\right] -( \alpha \sum_{j = 1}^{k} |\theta_{j}| + (1 - \alpha)\sum_{j = 1}^{k} \theta_{j}^{2})$$
 
 $\alpha \in (0, 1)$.  
 
 This approach is particularly useful when the number of predictors is much larger than the number of
 observations `r Cite(bib, 'EN', .opts = list(cite.style = "numeric"))`. 
+
+## Formula in glmnet
+
+The general notion of optimizing a function in the computer science world is to minimize instead of maximize the objective function. 
+This is the case in glmnet package. The general formula which yealds the $\widehat{\theta}$ is the following: 
+
+$$-\dfrac{1}{N}\sum_{i}^{n}\left[y_{i}\theta^{T}\mathbb{X}_{i} + log(1 + e^{\theta^{T}\mathbb{X}_{i}})\right] + \lambda \left( \alpha \sum_{j = 1}^{k} |\theta_{j}| + (1 - \alpha)\sum_{j = 1}^{k} \theta_{j}^{2}\right) $$
+
+If $\alpha$ = 0 then we have Ridge regression. If $\alpha$ = 1 then we have Lasso regression.
 
 \newpage
 
@@ -519,3 +532,6 @@ kable(result_frame)
 ```{r references, results="asis", echo=F, warning=F}
 PrintBibliography(bib)
 ```
+
+
+
